syntax = "proto3";

service EmailService {
  rpc SendEmail (EmailRequest) returns (EmailResponse);
}

message EmailRequest {
  string receiver = 1;
  string subject = 2;
  string body = 3;
}

message EmailResponse {
  bool success = 1;
  string message = 2;
}
